# multi-agent-calendar-assistant

./: .gitignore  README.md  main.py  plan.md  pyproject.toml
agents/: availability_checking_agent.py  editing_agent.py  removal_agent.py  scheduler_agent.py  supervisor_agent.py
api/: routes.py
graph/: workflow.py
prompts/: prompts.py  scheduler.txt
schemas/: schemas.py
test/: test_availability.py  test_schedule_agent.py
tools/: calendar_tools.py
ui/: streamlit_app.py
